# ethereum-bridge-e2e-tests

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/e2e_submit_fake_transfer/: Cargo.toml  README.md
crates/e2e_submit_fake_transfer/src/: cli.rs  configuration.rs  main.rs  test.rs  utils.rs
crates/e2e_tests/: Cargo.toml
crates/tx_modify_erc20_supply/: Cargo.toml  README.md
crates/tx_modify_erc20_supply/src/: tx.rs
