[workspace]
resolver = "2"

members = [
  "crates/*",
]

[patch.crates-io]
# patches here should include patches done by wasm/wasm_source/Cargo.toml in the Namada repo
borsh = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
borsh-derive = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
borsh-derive-internal = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
borsh-schema-derive-internal = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}

# patched to a commit on the `eth-bridge-integration` branch of our fork
tendermint = {git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "bc0b6ac47b3bfc1ee8b944341b654b867b3b5d0b"}
tendermint-proto = {git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "bc0b6ac47b3bfc1ee8b944341b654b867b3b5d0b"}
tendermint-testgen = {git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "bc0b6ac47b3bfc1ee8b944341b654b867b3b5d0b"}
tendermint-light-client-verifier = {git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "bc0b6ac47b3bfc1ee8b944341b654b867b3b5d0b"}

# patched to a commit on the `eth-bridge-integration` branch of our fork
ibc = {git = "https://github.com/heliaxdev/ibc-rs.git", rev = "451ff75591d9de48b7147a651858c3daeb5e2436"}
ibc-proto = {git = "https://github.com/heliaxdev/ibc-rs.git", rev = "451ff75591d9de48b7147a651858c3daeb5e2436"}

[patch."https://github.com/anoma/namada"]
# specify the specific version of Namada being worked against here
# https://stackoverflow.com/a/72261235/2387626
namada = {git = "https://github.com/anoma/namada?branch=eth-bridge-integration", rev = "f3a87098fbba9d8708f08b5ddec403945b555ea2"}

[patch."https://github.com/anoma/e2e-test-helpers"]
# specify the specific version of Namada being worked against here
# https://stackoverflow.com/a/72261235/2387626
namada_cli = {git = "https://github.com/anoma/e2e-test-helpers?branch=eth-bridge-integration", rev = "c995e343dc34037add36be961ea568d950ba90ff"}
ethereum_bridge = {git = "https://github.com/anoma/e2e-test-helpers?branch=eth-bridge-integration", rev = "c995e343dc34037add36be961ea568d950ba90ff"}

[profile.dev]
# smaller and faster wasm (https://rustwasm.github.io/book/reference/code-size.html#compiling-with-link-time-optimizations-lto)
lto = true
# tell llvm to optimize for size (https://rustwasm.github.io/book/reference/code-size.html#tell-llvm-to-optimize-for-size-instead-of-speed)
opt-level = 'z'

[profile.test]
lto = false
opt-level = 0

[profile.release]
# smaller and faster wasm (https://rustwasm.github.io/book/reference/code-size.html#compiling-with-link-time-optimizations-lto)
lto = true
# simply terminate on panics, no unwinding
panic = "abort"
# tell llvm to optimize for size (https://rustwasm.github.io/book/reference/code-size.html#tell-llvm-to-optimize-for-size-instead-of-speed)
opt-level = 'z'
strip = 'symbols'