[package]
name = "e2e_submit_fake_transfer"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = {version = "4.0", features = ["derive"]}
colored = "2.0.0"
config = {version = "0.13", features = ["toml"]}
ethereum_bridge = {git = "https://github.com/anoma/e2e-test-helpers", branch = "eth-bridge-integration"}
eyre = "0.6.5"
namada = {git = "https://github.com/anoma/namada", branch = "eth-bridge-integration", features = ["rand", "testing"]}
namada_cli = {git = "https://github.com/anoma/e2e-test-helpers", branch = "eth-bridge-integration"}
serde = "1.0"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"