[package]
name = "e2e_submit_fake_transfer"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0.0"
config = { version = "0.13", features = ["toml"] }
ethereum_bridge = { git = "https://github.com/anoma/e2e-test-helpers?branch=eth-bridge-integration", rev = "b1a827c8fa308674cff94e3a7c26cb0b9cfadd53" }
eyre = "0.6.5"
namada = { git = "https://github.com/anoma/namada?branch=eth-bridge-integration", rev = "da7f527a672a931108175514cc389476d3eb1916" }
namada_cli = { git = "https://github.com/anoma/e2e-test-helpers?branch=eth-bridge-integration", rev = "86ec3e5dd731eb61a4610f3cac8982d207954e6a" }
serde = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
