[package]
name = "e2e_submit_fake_transfer"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
colored = "2.0.0"
config = { version = "0.13", features = ["toml"] }
ethereum_bridge = { git = "https://github.com/anoma/e2e-test-helpers", rev = "99559790cde27953f60e31023d8df670f7b561ff" }
eyre = "0.6.5"
namada = { git = "https://github.com/anoma/namada", rev = "10e283f16a3c06a4999259c5ad1db0d78fa04788" }
namada_cli = { git = "https://github.com/anoma/e2e-test-helpers", rev = "99559790cde27953f60e31023d8df670f7b561ff" }
serde = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
