[package]
name = "e2e_tests"
authors = ["Heliax <hello@heliax.dev>"]
license = "GPL-3.0"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "attempt_modify_wdai_supply"
path = "src/bin/attempt_modify_wdai_supply/main.rs"

[[bin]]
name = "submit_wdai_transfer"
path = "src/bin/submit_wdai_transfer/main.rs"

[dependencies]
test_runner = { git = "https://github.com/anoma/test_runner", rev = "2e735382161e5aea70f4e5c15e0ea57a96e79ae7" }
shared = {path = "../shared" }
namada = {git = "https://github.com/anoma/namada", rev = "a70eafb2a724f014eda0323a09ccb80af994cd8c", features = ["rand"]}
rand = "0.8"
eyre = "0.6.8"