[package]
name = "e2e_tests"
authors = ["Heliax <hello@heliax.dev>"]
license = "GPL-3.0"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "attempt_modify_wdai_supply"
path = "src/bin/attempt_modify_wdai_supply/main.rs"

[dependencies]
test_runner = { git = "https://github.com/anoma/e2e-test-helpers", rev = "14c70ebb19ccc2e773bb965e47a9a4507094aa1d" }
shared = {path = "../shared" }
namada = {git = "https://github.com/anoma/namada", rev = "f3a87098fbba9d8708f08b5ddec403945b555ea2", features = ["rand"]}
rand = "0.8"
eyre = "0.6.8"