[package]
name = "tx_modify_erc20_supply"
authors = ["Heliax AG <hello@heliax.dev>"]
license = "GPL-3.0"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
namada_tx_prelude = {git = "https://github.com/anoma/namada", rev = "f3a87098fbba9d8708f08b5ddec403945b555ea2"}
namada = {git = "https://github.com/anoma/namada", rev = "f3a87098fbba9d8708f08b5ddec403945b555ea2"}
borsh = "0.9.0"
wee_alloc = "0.4.5"
eyre = "0.6.8"
shared = {path = "../shared" }
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
namada_tests = {git = "https://github.com/anoma/namada", rev = "f3a87098fbba9d8708f08b5ddec403945b555ea2"}